# QualificationProject

TestTool/source/GSC_MLTool/: CMakeLists.txt
TestTool/source/GSC_MLTool/GSC_MLTool/: GSC_MLTool.h  GSC_MLToolDict.h  IGSC_MLTool.h  selection.xml
TestTool/source/GSC_MLTool/Root/: GSC_MLTool.cxx
TestTool/source/GSC_MLTool/share/: neural_net.json
TestTool/source/MyAnalysis/: CMakeLists.txt
TestTool/source/MyAnalysis/MyAnalysis/: MyxAODAnalysis.h
TestTool/source/MyAnalysis/Root/: MyxAODAnalysis.cxx
TestTool/source/MyAnalysis/share/: ATestRun_eljob.cxx
